# pavan-x-interface-assignment

./: readme.md
computer_vision_task/: README.md
computer_vision_task/data/sop/: sop.docx
frontend_task/colab_frontend/: package.json  theme.ts  tsconfig.json  types.ts
frontend_task/colab_frontend/app/: layout.tsx  providers.tsx
frontend_task/colab_frontend/hooks/: use-server-user.ts  use-user.ts
frontend_task/colab_frontend/mutations/: useCreateActivity.ts
frontend_task/colab_frontend/prisma/: schema.prisma
frontend_task/colab_frontend/queries/: get-demo-accounts.ts  get-document-activity.ts  get-document-revisions.ts  get-document.ts  get-documents-count.ts  get-documents.ts  get-organization-activity.ts  get-profile.ts
frontend_task/colab_frontend/scripts/: seed.ts
frontend_task/colab_frontend/supabase/: config.toml  types.ts
regulation_task/: .env  .gitignore  README.md  pyproject.toml  run.py
regulation_task/app/: __init__.py  cli.py  main.py
regulation_task/app/api/: api.py
regulation_task/app/api/endpoints/: analysis.py  files.py  reports.py
regulation_task/app/core/: config.py  lifespan.py
regulation_task/app/db/: __init__.py  vector_store.py
regulation_task/app/models/: __init__.py  embeddings.py
regulation_task/app/schemas/: analysis.py  files.py  reports.py
regulation_task/app/services/: __init__.py  analysis_service.py  document_service.py  llm_service.py
regulation_task/app/templates/: index.html
regulation_task/app/utils/: document_processing.py
regulation_task/templates/: index.html
(+50 files in other folders)
